[project]
name = "who-am-i"
version = "0.1.0"
description = "Telegram-бот с тестами \"Узнай о себе\""
authors = [
    {name = "vadim",email = "lzaitsev@gmail.com"}
]
requires-python = ">=3.10, <3.15"
dependencies = [
    "aiogram (>=3.25.0,<4.0.0)",
    "fastapi (>=0.129.0,<0.130.0)",
    "sqlalchemy[asyncio] (>=2.0.46,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "black (>=26.1.0,<27.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "greenlet (>=3.3.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "ruff (>=0.15.2,<0.16.0)"
]
